cmake_minimum_required(VERSION 3.17)
project(HITSIC_TC264DA_ADS C)

set(CMAKE_C_STANDARD 11)

include_directories(Configurations)
include_directories(Libraries)
include_directories(Libraries/iLLD/TC26B/Tricore)
include_directories(Libraries/iLLD/TC26B/Tricore/_Impl)
include_directories(Libraries/iLLD/TC26B/Tricore/_Lib/DataHandling)
include_directories(Libraries/iLLD/TC26B/Tricore/_Lib/InternalMux)
include_directories(Libraries/iLLD/TC26B/Tricore/_PinMap)
include_directories(Libraries/iLLD/TC26B/Tricore/Asclin/Asc)
include_directories(Libraries/iLLD/TC26B/Tricore/Asclin/Lin)
include_directories(Libraries/iLLD/TC26B/Tricore/Asclin/Spi)
include_directories(Libraries/iLLD/TC26B/Tricore/Asclin/Std)
include_directories(Libraries/iLLD/TC26B/Tricore/Ccu6/Icu)
include_directories(Libraries/iLLD/TC26B/Tricore/Ccu6/PwmBc)
include_directories(Libraries/iLLD/TC26B/Tricore/Ccu6/PwmHl)
include_directories(Libraries/iLLD/TC26B/Tricore/Ccu6/Std)
include_directories(Libraries/iLLD/TC26B/Tricore/Ccu6/Timer)
include_directories(Libraries/iLLD/TC26B/Tricore/Ccu6/TimerWithTrigger)
include_directories(Libraries/iLLD/TC26B/Tricore/Ccu6/TPwm)
include_directories(Libraries/iLLD/TC26B/Tricore/Cif/Cam)
include_directories(Libraries/iLLD/TC26B/Tricore/Cif/Std)
include_directories(Libraries/iLLD/TC26B/Tricore/Cpu/CStart)
include_directories(Libraries/iLLD/TC26B/Tricore/Cpu/Irq)
include_directories(Libraries/iLLD/TC26B/Tricore/Cpu/Std)
include_directories(Libraries/iLLD/TC26B/Tricore/Cpu/Trap)
include_directories(Libraries/iLLD/TC26B/Tricore/Dma/Dma)
include_directories(Libraries/iLLD/TC26B/Tricore/Dma/Std)
include_directories(Libraries/iLLD/TC26B/Tricore/Dsadc/Dsadc)
include_directories(Libraries/iLLD/TC26B/Tricore/Dsadc/Rdc)
include_directories(Libraries/iLLD/TC26B/Tricore/Dsadc/Std)
include_directories(Libraries/iLLD/TC26B/Tricore/Dts/Dts)
include_directories(Libraries/iLLD/TC26B/Tricore/Dts/Std)
include_directories(Libraries/iLLD/TC26B/Tricore/Emem/Std)
include_directories(Libraries/iLLD/TC26B/Tricore/Eray/Eray)
include_directories(Libraries/iLLD/TC26B/Tricore/Eray/Std)
include_directories(Libraries/iLLD/TC26B/Tricore/Eth/Phy_Pef7071)
include_directories(Libraries/iLLD/TC26B/Tricore/Eth/Std)
include_directories(Libraries/iLLD/TC26B/Tricore/Fce/Crc)
include_directories(Libraries/iLLD/TC26B/Tricore/Fce/Std)
include_directories(Libraries/iLLD/TC26B/Tricore/Fft/Fft)
include_directories(Libraries/iLLD/TC26B/Tricore/Fft/Std)
include_directories(Libraries/iLLD/TC26B/Tricore/Flash/Std)
include_directories(Libraries/iLLD/TC26B/Tricore/Gpt12/IncrEnc)
include_directories(Libraries/iLLD/TC26B/Tricore/Gpt12/Std)
include_directories(Libraries/iLLD/TC26B/Tricore/Gtm/Atom/Pwm)
include_directories(Libraries/iLLD/TC26B/Tricore/Gtm/Atom/PwmHl)
include_directories(Libraries/iLLD/TC26B/Tricore/Gtm/Atom/Timer)
include_directories(Libraries/iLLD/TC26B/Tricore/Gtm/Std)
include_directories(Libraries/iLLD/TC26B/Tricore/Gtm/Tim/In)
include_directories(Libraries/iLLD/TC26B/Tricore/Gtm/Tom/Pwm)
include_directories(Libraries/iLLD/TC26B/Tricore/Gtm/Tom/PwmHl)
include_directories(Libraries/iLLD/TC26B/Tricore/Gtm/Tom/Timer)
include_directories(Libraries/iLLD/TC26B/Tricore/Gtm/Trig)
include_directories(Libraries/iLLD/TC26B/Tricore/Hssl/Hssl)
include_directories(Libraries/iLLD/TC26B/Tricore/Hssl/Std)
include_directories(Libraries/iLLD/TC26B/Tricore/I2c/I2c)
include_directories(Libraries/iLLD/TC26B/Tricore/I2c/Std)
include_directories(Libraries/iLLD/TC26B/Tricore/Iom/Driver)
include_directories(Libraries/iLLD/TC26B/Tricore/Iom/Std)
include_directories(Libraries/iLLD/TC26B/Tricore/Msc/Msc)
include_directories(Libraries/iLLD/TC26B/Tricore/Msc/Std)
include_directories(Libraries/iLLD/TC26B/Tricore/Mtu/Std)
include_directories(Libraries/iLLD/TC26B/Tricore/Multican/Can)
include_directories(Libraries/iLLD/TC26B/Tricore/Multican/Std)
include_directories(Libraries/iLLD/TC26B/Tricore/Port/Io)
include_directories(Libraries/iLLD/TC26B/Tricore/Port/Std)
include_directories(Libraries/iLLD/TC26B/Tricore/Psi5/Psi5)
include_directories(Libraries/iLLD/TC26B/Tricore/Psi5/Std)
include_directories(Libraries/iLLD/TC26B/Tricore/Psi5s/Psi5s)
include_directories(Libraries/iLLD/TC26B/Tricore/Psi5s/Std)
include_directories(Libraries/iLLD/TC26B/Tricore/Qspi/SpiMaster)
include_directories(Libraries/iLLD/TC26B/Tricore/Qspi/SpiSlave)
include_directories(Libraries/iLLD/TC26B/Tricore/Qspi/Std)
include_directories(Libraries/iLLD/TC26B/Tricore/Scu/Std)
include_directories(Libraries/iLLD/TC26B/Tricore/Sent/Sent)
include_directories(Libraries/iLLD/TC26B/Tricore/Sent/Std)
include_directories(Libraries/iLLD/TC26B/Tricore/Smu/Std)
include_directories(Libraries/iLLD/TC26B/Tricore/Src/Std)
include_directories(Libraries/iLLD/TC26B/Tricore/Stm/Std)
include_directories(Libraries/iLLD/TC26B/Tricore/Stm/Timer)
include_directories(Libraries/iLLD/TC26B/Tricore/Vadc/Adc)
include_directories(Libraries/iLLD/TC26B/Tricore/Vadc/Std)
include_directories(Libraries/Infra/Platform/Tricore/Compilers)
include_directories(Libraries/Infra/Sfr)
include_directories(Libraries/Infra/Sfr/TC26B)
include_directories(Libraries/Infra/Sfr/TC26B/_Reg)
include_directories(Libraries/Service/CpuGeneric/_Utilities)
include_directories(Libraries/Service/CpuGeneric/If)
include_directories(Libraries/Service/CpuGeneric/If/Ccu6If)
include_directories(Libraries/Service/CpuGeneric/StdIf)
include_directories(Libraries/Service/CpuGeneric/SysSe/Bsp)
include_directories(Libraries/Service/CpuGeneric/SysSe/Comm)
include_directories(Libraries/Service/CpuGeneric/SysSe/General)
include_directories(Libraries/Service/CpuGeneric/SysSe/Math)
include_directories(Libraries/Service/CpuGeneric/SysSe/Time)

add_executable(HITSIC_TC264DA_ADS
        Configurations/Debug/sync_on_halt.c
        Configurations/Ifx_Cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxAsclin_cfg.c
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxAsclin_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxCcu6_cfg.c
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxCcu6_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxCif_cfg.c
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxCif_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxCpu_cfg.c
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxCpu_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxDma_cfg.c
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxDma_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxDsadc_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxDts_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxEmem_cfg.c
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxEmem_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxEray_cfg.c
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxEray_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxEth_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxFce_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxFft_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxFlash_cfg.c
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxFlash_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxGlobal_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxGpt12_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxGtm_cfg.c
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxGtm_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxHssl_cfg.c
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxHssl_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxI2c_cfg.c
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxI2c_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxIom_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxMsc_cfg.c
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxMsc_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxMtu_cfg.c
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxMtu_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxMultican_cfg.c
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxMultican_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxPort_cfg.c
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxPort_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxPsi5_cfg.c
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxPsi5_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxPsi5s_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxQspi_cfg.c
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxQspi_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxScu_cfg.c
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxScu_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxSent_cfg.c
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxSent_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxSmu_cfg.c
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxSmu_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxSrc_cfg.c
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxSrc_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxStm_cfg.c
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxStm_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxVadc_cfg.c
        Libraries/iLLD/TC26B/Tricore/_Impl/IfxVadc_cfg.h
        Libraries/iLLD/TC26B/Tricore/_Lib/DataHandling/Ifx_CircularBuffer.asm.c
        Libraries/iLLD/TC26B/Tricore/_Lib/DataHandling/Ifx_CircularBuffer.c
        Libraries/iLLD/TC26B/Tricore/_Lib/DataHandling/Ifx_CircularBuffer.h
        Libraries/iLLD/TC26B/Tricore/_Lib/DataHandling/Ifx_Fifo.c
        Libraries/iLLD/TC26B/Tricore/_Lib/DataHandling/Ifx_Fifo.h
        Libraries/iLLD/TC26B/Tricore/_Lib/InternalMux/Ifx_InternalMux.c
        Libraries/iLLD/TC26B/Tricore/_Lib/InternalMux/Ifx_InternalMux.h
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxAsclin_PinMap.c
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxAsclin_PinMap.h
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxCcu6_PinMap.c
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxCcu6_PinMap.h
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxCif_PinMap.c
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxCif_PinMap.h
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxDsadc_PinMap.c
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxDsadc_PinMap.h
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxEray_PinMap.c
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxEray_PinMap.h
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxEth_PinMap.c
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxEth_PinMap.h
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxGpt12_PinMap.c
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxGpt12_PinMap.h
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxGtm_PinMap.c
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxGtm_PinMap.h
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxI2c_PinMap.c
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxI2c_PinMap.h
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxMsc_PinMap.c
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxMsc_PinMap.h
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxMultican_PinMap.c
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxMultican_PinMap.h
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxPort_PinMap.c
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxPort_PinMap.h
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxPsi5_PinMap.c
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxPsi5_PinMap.h
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxPsi5s_PinMap.c
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxPsi5s_PinMap.h
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxQspi_PinMap.c
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxQspi_PinMap.h
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxScu_PinMap.c
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxScu_PinMap.h
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxSent_PinMap.c
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxSent_PinMap.h
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxSmu_PinMap.c
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxSmu_PinMap.h
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxVadc_PinMap.c
        Libraries/iLLD/TC26B/Tricore/_PinMap/IfxVadc_PinMap.h
        Libraries/iLLD/TC26B/Tricore/Asclin/Asc/IfxAsclin_Asc.c
        Libraries/iLLD/TC26B/Tricore/Asclin/Asc/IfxAsclin_Asc.h
        Libraries/iLLD/TC26B/Tricore/Asclin/Lin/IfxAsclin_Lin.c
        Libraries/iLLD/TC26B/Tricore/Asclin/Lin/IfxAsclin_Lin.h
        Libraries/iLLD/TC26B/Tricore/Asclin/Spi/IfxAsclin_Spi.c
        Libraries/iLLD/TC26B/Tricore/Asclin/Spi/IfxAsclin_Spi.h
        Libraries/iLLD/TC26B/Tricore/Asclin/Std/IfxAsclin.c
        Libraries/iLLD/TC26B/Tricore/Asclin/Std/IfxAsclin.h
        Libraries/iLLD/TC26B/Tricore/Ccu6/Icu/IfxCcu6_Icu.c
        Libraries/iLLD/TC26B/Tricore/Ccu6/Icu/IfxCcu6_Icu.h
        Libraries/iLLD/TC26B/Tricore/Ccu6/PwmBc/IfxCcu6_PwmBc.c
        Libraries/iLLD/TC26B/Tricore/Ccu6/PwmBc/IfxCcu6_PwmBc.h
        Libraries/iLLD/TC26B/Tricore/Ccu6/PwmHl/IfxCcu6_PwmHl.c
        Libraries/iLLD/TC26B/Tricore/Ccu6/PwmHl/IfxCcu6_PwmHl.h
        Libraries/iLLD/TC26B/Tricore/Ccu6/Std/IfxCcu6.c
        Libraries/iLLD/TC26B/Tricore/Ccu6/Std/IfxCcu6.h
        Libraries/iLLD/TC26B/Tricore/Ccu6/Timer/IfxCcu6_Timer.c
        Libraries/iLLD/TC26B/Tricore/Ccu6/Timer/IfxCcu6_Timer.h
        Libraries/iLLD/TC26B/Tricore/Ccu6/TimerWithTrigger/IfxCcu6_TimerWithTrigger.c
        Libraries/iLLD/TC26B/Tricore/Ccu6/TimerWithTrigger/IfxCcu6_TimerWithTrigger.h
        Libraries/iLLD/TC26B/Tricore/Ccu6/TPwm/IfxCcu6_TPwm.c
        Libraries/iLLD/TC26B/Tricore/Ccu6/TPwm/IfxCcu6_TPwm.h
        Libraries/iLLD/TC26B/Tricore/Cif/Cam/IfxCif_Cam.c
        Libraries/iLLD/TC26B/Tricore/Cif/Cam/IfxCif_Cam.h
        Libraries/iLLD/TC26B/Tricore/Cif/Std/IfxCif.c
        Libraries/iLLD/TC26B/Tricore/Cif/Std/IfxCif.h
        Libraries/iLLD/TC26B/Tricore/Cpu/CStart/IfxCpu_CStart.h
        Libraries/iLLD/TC26B/Tricore/Cpu/CStart/IfxCpu_CStart0.c
        Libraries/iLLD/TC26B/Tricore/Cpu/CStart/IfxCpu_CStart1.c
        Libraries/iLLD/TC26B/Tricore/Cpu/Irq/IfxCpu_Irq.c
        Libraries/iLLD/TC26B/Tricore/Cpu/Irq/IfxCpu_Irq.h
        Libraries/iLLD/TC26B/Tricore/Cpu/Std/Ifx_Types.h
        Libraries/iLLD/TC26B/Tricore/Cpu/Std/Ifx_TypesDcc.h
        Libraries/iLLD/TC26B/Tricore/Cpu/Std/Ifx_TypesGhs.h
        Libraries/iLLD/TC26B/Tricore/Cpu/Std/Ifx_TypesGnuc.h
        Libraries/iLLD/TC26B/Tricore/Cpu/Std/Ifx_TypesTasking.h
        Libraries/iLLD/TC26B/Tricore/Cpu/Std/IfxCpu.c
        Libraries/iLLD/TC26B/Tricore/Cpu/Std/IfxCpu.h
        Libraries/iLLD/TC26B/Tricore/Cpu/Std/IfxCpu_Intrinsics.h
        Libraries/iLLD/TC26B/Tricore/Cpu/Std/IfxCpu_IntrinsicsDcc.h
        Libraries/iLLD/TC26B/Tricore/Cpu/Std/IfxCpu_IntrinsicsDcc2G.h
        Libraries/iLLD/TC26B/Tricore/Cpu/Std/IfxCpu_IntrinsicsGhs.h
        Libraries/iLLD/TC26B/Tricore/Cpu/Std/IfxCpu_IntrinsicsGhs2G.h
        Libraries/iLLD/TC26B/Tricore/Cpu/Std/IfxCpu_IntrinsicsGnuc.h
        Libraries/iLLD/TC26B/Tricore/Cpu/Std/IfxCpu_IntrinsicsGnuc2G.h
        Libraries/iLLD/TC26B/Tricore/Cpu/Std/IfxCpu_IntrinsicsTasking.h
        Libraries/iLLD/TC26B/Tricore/Cpu/Std/IfxCpu_IntrinsicsTasking2G.h
        Libraries/iLLD/TC26B/Tricore/Cpu/Std/Platform_Types.h
        Libraries/iLLD/TC26B/Tricore/Cpu/Trap/IfxCpu_Trap.c
        Libraries/iLLD/TC26B/Tricore/Cpu/Trap/IfxCpu_Trap.h
        Libraries/iLLD/TC26B/Tricore/Dma/Dma/IfxDma_Dma.c
        Libraries/iLLD/TC26B/Tricore/Dma/Dma/IfxDma_Dma.h
        Libraries/iLLD/TC26B/Tricore/Dma/Std/IfxDma.c
        Libraries/iLLD/TC26B/Tricore/Dma/Std/IfxDma.h
        Libraries/iLLD/TC26B/Tricore/Dsadc/Dsadc/IfxDsadc_Dsadc.c
        Libraries/iLLD/TC26B/Tricore/Dsadc/Dsadc/IfxDsadc_Dsadc.h
        Libraries/iLLD/TC26B/Tricore/Dsadc/Rdc/IfxDsadc_Rdc.c
        Libraries/iLLD/TC26B/Tricore/Dsadc/Rdc/IfxDsadc_Rdc.h
        Libraries/iLLD/TC26B/Tricore/Dsadc/Std/IfxDsadc.c
        Libraries/iLLD/TC26B/Tricore/Dsadc/Std/IfxDsadc.h
        Libraries/iLLD/TC26B/Tricore/Dts/Dts/IfxDts_Dts.c
        Libraries/iLLD/TC26B/Tricore/Dts/Dts/IfxDts_Dts.h
        Libraries/iLLD/TC26B/Tricore/Dts/Std/IfxDts.c
        Libraries/iLLD/TC26B/Tricore/Dts/Std/IfxDts.h
        Libraries/iLLD/TC26B/Tricore/Emem/Std/IfxEmem.c
        Libraries/iLLD/TC26B/Tricore/Emem/Std/IfxEmem.h
        Libraries/iLLD/TC26B/Tricore/Eray/Eray/IfxEray_Eray.c
        Libraries/iLLD/TC26B/Tricore/Eray/Eray/IfxEray_Eray.h
        Libraries/iLLD/TC26B/Tricore/Eray/Std/IfxEray.c
        Libraries/iLLD/TC26B/Tricore/Eray/Std/IfxEray.h
        Libraries/iLLD/TC26B/Tricore/Eth/Phy_Pef7071/IfxEth_Phy_Pef7071.c
        Libraries/iLLD/TC26B/Tricore/Eth/Phy_Pef7071/IfxEth_Phy_Pef7071.h
        Libraries/iLLD/TC26B/Tricore/Eth/Std/IfxEth.c
        Libraries/iLLD/TC26B/Tricore/Eth/Std/IfxEth.h
        Libraries/iLLD/TC26B/Tricore/Fce/Crc/IfxFce_Crc.c
        Libraries/iLLD/TC26B/Tricore/Fce/Crc/IfxFce_Crc.h
        Libraries/iLLD/TC26B/Tricore/Fce/Std/IfxFce.c
        Libraries/iLLD/TC26B/Tricore/Fce/Std/IfxFce.h
        Libraries/iLLD/TC26B/Tricore/Fft/Fft/IfxFft_Fft.c
        Libraries/iLLD/TC26B/Tricore/Fft/Fft/IfxFft_Fft.h
        Libraries/iLLD/TC26B/Tricore/Fft/Std/IfxFft.c
        Libraries/iLLD/TC26B/Tricore/Fft/Std/IfxFft.h
        Libraries/iLLD/TC26B/Tricore/Flash/Std/IfxFlash.c
        Libraries/iLLD/TC26B/Tricore/Flash/Std/IfxFlash.h
        Libraries/iLLD/TC26B/Tricore/Gpt12/IncrEnc/IfxGpt12_IncrEnc.c
        Libraries/iLLD/TC26B/Tricore/Gpt12/IncrEnc/IfxGpt12_IncrEnc.h
        Libraries/iLLD/TC26B/Tricore/Gpt12/Std/IfxGpt12.c
        Libraries/iLLD/TC26B/Tricore/Gpt12/Std/IfxGpt12.h
        Libraries/iLLD/TC26B/Tricore/Gtm/Atom/Pwm/IfxGtm_Atom_Pwm.c
        Libraries/iLLD/TC26B/Tricore/Gtm/Atom/Pwm/IfxGtm_Atom_Pwm.h
        Libraries/iLLD/TC26B/Tricore/Gtm/Atom/PwmHl/IfxGtm_Atom_PwmHl.c
        Libraries/iLLD/TC26B/Tricore/Gtm/Atom/PwmHl/IfxGtm_Atom_PwmHl.h
        Libraries/iLLD/TC26B/Tricore/Gtm/Atom/Timer/IfxGtm_Atom_Timer.c
        Libraries/iLLD/TC26B/Tricore/Gtm/Atom/Timer/IfxGtm_Atom_Timer.h
        Libraries/iLLD/TC26B/Tricore/Gtm/Std/IfxGtm.c
        Libraries/iLLD/TC26B/Tricore/Gtm/Std/IfxGtm.h
        Libraries/iLLD/TC26B/Tricore/Gtm/Std/IfxGtm_Atom.c
        Libraries/iLLD/TC26B/Tricore/Gtm/Std/IfxGtm_Atom.h
        Libraries/iLLD/TC26B/Tricore/Gtm/Std/IfxGtm_Cmu.c
        Libraries/iLLD/TC26B/Tricore/Gtm/Std/IfxGtm_Cmu.h
        Libraries/iLLD/TC26B/Tricore/Gtm/Std/IfxGtm_Dpll.c
        Libraries/iLLD/TC26B/Tricore/Gtm/Std/IfxGtm_Dpll.h
        Libraries/iLLD/TC26B/Tricore/Gtm/Std/IfxGtm_Tbu.c
        Libraries/iLLD/TC26B/Tricore/Gtm/Std/IfxGtm_Tbu.h
        Libraries/iLLD/TC26B/Tricore/Gtm/Std/IfxGtm_Tim.c
        Libraries/iLLD/TC26B/Tricore/Gtm/Std/IfxGtm_Tim.h
        Libraries/iLLD/TC26B/Tricore/Gtm/Std/IfxGtm_Tom.c
        Libraries/iLLD/TC26B/Tricore/Gtm/Std/IfxGtm_Tom.h
        Libraries/iLLD/TC26B/Tricore/Gtm/Tim/In/IfxGtm_Tim_In.c
        Libraries/iLLD/TC26B/Tricore/Gtm/Tim/In/IfxGtm_Tim_In.h
        Libraries/iLLD/TC26B/Tricore/Gtm/Tom/Pwm/IfxGtm_Tom_Pwm.c
        Libraries/iLLD/TC26B/Tricore/Gtm/Tom/Pwm/IfxGtm_Tom_Pwm.h
        Libraries/iLLD/TC26B/Tricore/Gtm/Tom/PwmHl/IfxGtm_Tom_PwmHl.c
        Libraries/iLLD/TC26B/Tricore/Gtm/Tom/PwmHl/IfxGtm_Tom_PwmHl.h
        Libraries/iLLD/TC26B/Tricore/Gtm/Tom/Timer/IfxGtm_Tom_Timer.c
        Libraries/iLLD/TC26B/Tricore/Gtm/Tom/Timer/IfxGtm_Tom_Timer.h
        Libraries/iLLD/TC26B/Tricore/Gtm/Trig/IfxGtm_Trig.c
        Libraries/iLLD/TC26B/Tricore/Gtm/Trig/IfxGtm_Trig.h
        Libraries/iLLD/TC26B/Tricore/Hssl/Hssl/IfxHssl_Hssl.c
        Libraries/iLLD/TC26B/Tricore/Hssl/Hssl/IfxHssl_Hssl.h
        Libraries/iLLD/TC26B/Tricore/Hssl/Std/IfxHssl.c
        Libraries/iLLD/TC26B/Tricore/Hssl/Std/IfxHssl.h
        Libraries/iLLD/TC26B/Tricore/I2c/I2c/IfxI2c_I2c.c
        Libraries/iLLD/TC26B/Tricore/I2c/I2c/IfxI2c_I2c.h
        Libraries/iLLD/TC26B/Tricore/I2c/Std/IfxI2c.c
        Libraries/iLLD/TC26B/Tricore/I2c/Std/IfxI2c.h
        Libraries/iLLD/TC26B/Tricore/Iom/Driver/IfxIom_Driver.c
        Libraries/iLLD/TC26B/Tricore/Iom/Driver/IfxIom_Driver.h
        Libraries/iLLD/TC26B/Tricore/Iom/Std/IfxIom.c
        Libraries/iLLD/TC26B/Tricore/Iom/Std/IfxIom.h
        Libraries/iLLD/TC26B/Tricore/Msc/Msc/IfxMsc_Msc.c
        Libraries/iLLD/TC26B/Tricore/Msc/Msc/IfxMsc_Msc.h
        Libraries/iLLD/TC26B/Tricore/Msc/Std/IfxMsc.c
        Libraries/iLLD/TC26B/Tricore/Msc/Std/IfxMsc.h
        Libraries/iLLD/TC26B/Tricore/Mtu/Std/IfxMtu.c
        Libraries/iLLD/TC26B/Tricore/Mtu/Std/IfxMtu.h
        Libraries/iLLD/TC26B/Tricore/Multican/Can/IfxMultican_Can.c
        Libraries/iLLD/TC26B/Tricore/Multican/Can/IfxMultican_Can.h
        Libraries/iLLD/TC26B/Tricore/Multican/Std/IfxMultican.c
        Libraries/iLLD/TC26B/Tricore/Multican/Std/IfxMultican.h
        Libraries/iLLD/TC26B/Tricore/Port/Io/IfxPort_Io.c
        Libraries/iLLD/TC26B/Tricore/Port/Io/IfxPort_Io.h
        Libraries/iLLD/TC26B/Tricore/Port/Std/IfxPort.c
        Libraries/iLLD/TC26B/Tricore/Port/Std/IfxPort.h
        Libraries/iLLD/TC26B/Tricore/Psi5/Psi5/IfxPsi5_Psi5.c
        Libraries/iLLD/TC26B/Tricore/Psi5/Psi5/IfxPsi5_Psi5.h
        Libraries/iLLD/TC26B/Tricore/Psi5/Std/IfxPsi5.c
        Libraries/iLLD/TC26B/Tricore/Psi5/Std/IfxPsi5.h
        Libraries/iLLD/TC26B/Tricore/Psi5s/Psi5s/IfxPsi5s_Psi5s.c
        Libraries/iLLD/TC26B/Tricore/Psi5s/Psi5s/IfxPsi5s_Psi5s.h
        Libraries/iLLD/TC26B/Tricore/Psi5s/Std/IfxPsi5s.c
        Libraries/iLLD/TC26B/Tricore/Psi5s/Std/IfxPsi5s.h
        Libraries/iLLD/TC26B/Tricore/Qspi/SpiMaster/IfxQspi_SpiMaster.c
        Libraries/iLLD/TC26B/Tricore/Qspi/SpiMaster/IfxQspi_SpiMaster.h
        Libraries/iLLD/TC26B/Tricore/Qspi/SpiSlave/IfxQspi_SpiSlave.c
        Libraries/iLLD/TC26B/Tricore/Qspi/SpiSlave/IfxQspi_SpiSlave.h
        Libraries/iLLD/TC26B/Tricore/Qspi/Std/IfxQspi.c
        Libraries/iLLD/TC26B/Tricore/Qspi/Std/IfxQspi.h
        Libraries/iLLD/TC26B/Tricore/Scu/Std/IfxScuCcu.c
        Libraries/iLLD/TC26B/Tricore/Scu/Std/IfxScuCcu.h
        Libraries/iLLD/TC26B/Tricore/Scu/Std/IfxScuEru.c
        Libraries/iLLD/TC26B/Tricore/Scu/Std/IfxScuEru.h
        Libraries/iLLD/TC26B/Tricore/Scu/Std/IfxScuWdt.asm.h
        Libraries/iLLD/TC26B/Tricore/Scu/Std/IfxScuWdt.c
        Libraries/iLLD/TC26B/Tricore/Scu/Std/IfxScuWdt.h
        Libraries/iLLD/TC26B/Tricore/Sent/Sent/IfxSent_Sent.c
        Libraries/iLLD/TC26B/Tricore/Sent/Sent/IfxSent_Sent.h
        Libraries/iLLD/TC26B/Tricore/Sent/Std/IfxSent.c
        Libraries/iLLD/TC26B/Tricore/Sent/Std/IfxSent.h
        Libraries/iLLD/TC26B/Tricore/Smu/Std/IfxSmu.c
        Libraries/iLLD/TC26B/Tricore/Smu/Std/IfxSmu.h
        Libraries/iLLD/TC26B/Tricore/Src/Std/IfxSrc.c
        Libraries/iLLD/TC26B/Tricore/Src/Std/IfxSrc.h
        Libraries/iLLD/TC26B/Tricore/Stm/Std/IfxStm.c
        Libraries/iLLD/TC26B/Tricore/Stm/Std/IfxStm.h
        Libraries/iLLD/TC26B/Tricore/Stm/Timer/IfxStm_Timer.c
        Libraries/iLLD/TC26B/Tricore/Stm/Timer/IfxStm_Timer.h
        Libraries/iLLD/TC26B/Tricore/Vadc/Adc/IfxVadc_Adc.c
        Libraries/iLLD/TC26B/Tricore/Vadc/Adc/IfxVadc_Adc.h
        Libraries/iLLD/TC26B/Tricore/Vadc/Std/IfxVadc.c
        Libraries/iLLD/TC26B/Tricore/Vadc/Std/IfxVadc.h
        Libraries/iLLD/TC26B/Tricore/IfxLldVersion.h
        Libraries/Infra/Platform/Tricore/Compilers/CompilerDcc.c
        Libraries/Infra/Platform/Tricore/Compilers/CompilerDcc.h
        Libraries/Infra/Platform/Tricore/Compilers/CompilerGhs.c
        Libraries/Infra/Platform/Tricore/Compilers/CompilerGhs.h
        Libraries/Infra/Platform/Tricore/Compilers/CompilerGnuc.c
        Libraries/Infra/Platform/Tricore/Compilers/CompilerGnuc.h
        Libraries/Infra/Platform/Tricore/Compilers/Compilers.h
        Libraries/Infra/Platform/Tricore/Compilers/CompilerTasking.c
        Libraries/Infra/Platform/Tricore/Compilers/CompilerTasking.h
        Libraries/Infra/Sfr/TC26B/_Reg/Ifx_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/Ifx_TypesReg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxAsclin_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxAsclin_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxAsclin_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxCan_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxCan_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxCan_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxCbs_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxCbs_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxCbs_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxCcu6_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxCcu6_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxCcu6_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxCif_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxCif_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxCif_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxCpu_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxCpu_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxCpu_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxDma_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxDma_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxDma_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxDsadc_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxDsadc_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxDsadc_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxEbcu_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxEbcu_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxEbcu_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxEmem_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxEmem_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxEmem_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxEray_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxEray_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxEray_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxEth_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxEth_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxEth_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxFce_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxFce_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxFce_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxFft_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxFft_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxFft_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxFlash_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxFlash_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxFlash_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxGpt12_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxGpt12_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxGpt12_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxGtm_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxGtm_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxGtm_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxHsct_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxHsct_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxHsct_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxHssl_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxHssl_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxHssl_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxI2c_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxI2c_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxI2c_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxInt_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxInt_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxInt_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxIom_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxIom_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxIom_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxLmu_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxLmu_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxLmu_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxMc_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxMc_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxMc_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxMsc_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxMsc_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxMsc_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxMtu_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxMtu_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxMtu_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxOvc_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxOvc_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxOvc_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxPmu_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxPmu_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxPmu_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxPort_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxPort_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxPort_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxPsi5_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxPsi5_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxPsi5_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxPsi5s_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxPsi5s_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxPsi5s_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxQspi_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxQspi_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxQspi_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxSbcu_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxSbcu_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxSbcu_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxScu_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxScu_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxScu_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxSent_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxSent_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxSent_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxSmu_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxSmu_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxSmu_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxSrc_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxSrc_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxSrc_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxStm_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxStm_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxStm_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxVadc_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxVadc_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxVadc_regdef.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxXbar_bf.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxXbar_reg.h
        Libraries/Infra/Sfr/TC26B/_Reg/IfxXbar_regdef.h
        Libraries/Service/CpuGeneric/_Utilities/Ifx_Assert.h
        Libraries/Service/CpuGeneric/If/Ccu6If/Icu.h
        Libraries/Service/CpuGeneric/If/Ccu6If/PwmHl.h
        Libraries/Service/CpuGeneric/If/Ccu6If/Timer.h
        Libraries/Service/CpuGeneric/If/Ccu6If/TPwm.h
        Libraries/Service/CpuGeneric/If/SpiIf.c
        Libraries/Service/CpuGeneric/If/SpiIf.h
        Libraries/Service/CpuGeneric/StdIf/IfxStdIf.h
        Libraries/Service/CpuGeneric/StdIf/IfxStdIf_DPipe.c
        Libraries/Service/CpuGeneric/StdIf/IfxStdIf_DPipe.h
        Libraries/Service/CpuGeneric/StdIf/IfxStdIf_Pos.c
        Libraries/Service/CpuGeneric/StdIf/IfxStdIf_Pos.h
        Libraries/Service/CpuGeneric/StdIf/IfxStdIf_PwmHl.c
        Libraries/Service/CpuGeneric/StdIf/IfxStdIf_PwmHl.h
        Libraries/Service/CpuGeneric/StdIf/IfxStdIf_Timer.c
        Libraries/Service/CpuGeneric/StdIf/IfxStdIf_Timer.h
        Libraries/Service/CpuGeneric/SysSe/Bsp/Assert.c
        Libraries/Service/CpuGeneric/SysSe/Bsp/Assert.h
        Libraries/Service/CpuGeneric/SysSe/Bsp/Bsp.c
        Libraries/Service/CpuGeneric/SysSe/Bsp/Bsp.h
        Libraries/Service/CpuGeneric/SysSe/Comm/Ifx_Console.c
        Libraries/Service/CpuGeneric/SysSe/Comm/Ifx_Console.h
        Libraries/Service/CpuGeneric/SysSe/Comm/Ifx_Shell.c
        Libraries/Service/CpuGeneric/SysSe/Comm/Ifx_Shell.h
        Libraries/Service/CpuGeneric/SysSe/General/Ifx_GlobalResources.c
        Libraries/Service/CpuGeneric/SysSe/General/Ifx_GlobalResources.h
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_AngleTrkF32.c
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_AngleTrkF32.h
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_Cf32.c
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_Cf32.h
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_Crc.c
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_Crc.h
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_FftF32.c
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_FftF32.h
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_FftF32_BitReverseTable.c
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_FftF32_TwiddleTable.c
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_IntegralF32.c
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_IntegralF32.h
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_LowPassPt1F32.c
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_LowPassPt1F32.h
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_Lut.h
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_LutAtan2F32.c
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_LutAtan2F32.h
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_LutAtan2F32_Table.c
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_LutIndexedLinearF32.h
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_LutLinearF32.c
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_LutLinearF32.h
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_LutLSincosF32.c
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_LutLSincosF32.h
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_LutSincosF32.c
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_LutSincosF32.h
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_LutSincosF32_Table.c
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_RampF32.c
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_RampF32.h
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_WndF32.h
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_WndF32_BlackmanHarrisTable.c
        Libraries/Service/CpuGeneric/SysSe/Math/Ifx_WndF32_HannTable.c
        Libraries/Service/CpuGeneric/SysSe/Time/Ifx_DateTime.c
        Libraries/Service/CpuGeneric/SysSe/Time/Ifx_DateTime.h
        Libraries/aurix_pin_mappings.c
        Libraries/aurix_pin_mappings.h
        source/Cpu0_Main.c
        source/Cpu1_Main.c)
